test/files/neg/t0345.check
t0345.scala:2: error: object creation impossible, since method cons in trait Lizt of type (a: Nothing)Unit is not defined
    val empty = new Lizt[Nothing] {
                    ^
one error found
